--- a/index.html
+++ b/index.html
@@ -8,6 +8,27 @@
     <title>Frontend Mentor | Product preview card component</title>
   </head>
   <body>
-    <main class="container"></main>
+    <main class="container">
+      <div class="card-product">
+        <img
+          class="card-product__image"
+          src="./images/image-product-mobile.jpg"
+          alt="product-image"
+        />
+        <div class="card-product__info">
+          <p class="card-product__info-category">PERFUME</p>
+          <h3 class="card-product__info-name">Gabrielle Essence Eau De Parfum</h3>
+          <p class="card-product__info-description">
+            A floral, solar and voluptuous interpretation composed by Olivier Polge,
+            Perfumer-Creator for the House of CHANEL.
+          </p>
+          <div class="card-product__price">
+            <span class="card-product__price-discount">$149.99</span>
+            <span class="card-product__price-original">$169.99</span>
+          </div>
+          <button class="btn--primary">Add to Cart</button>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
