--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
           src="./images/image-product-mobile.jpg"
           alt="product-image"
         />
+        <img
+          class="card-product__image-desktop"
+          src="./images/image-product-desktop.jpg"
+          alt="product-image"
+        />
         <div class="card-product__info">
           <p class="card-product__info-category">PERFUME</p>
           <h3 class="card-product__info-name">Gabrielle Essence Eau De Parfum</h3>
@@ -26,7 +31,9 @@
             <span class="card-product__price-discount">$149.99</span>
             <span class="card-product__price-original">$169.99</span>
           </div>
-          <button class="btn--primary">Add to Cart</button>
+          <button class="btn--primary">
+            <img src="./images/icon-cart.svg" alt="icon-cart" /> Add to Cart
+          </button>
         </div>
       </div>
     </main>
